Fix overflow in footer

--- a/static/css/hl.css
+++ b/static/css/hl.css
@@ -45,12 +45,15 @@ h2 {
   bottom:0;
   width:100%;
   height:4em;
+  overflow: hidden;
   line-height:2em;
 }
 
 .footer p {
   margin-top:1em;
   font-size:13px;
+  height: 30px;
+overflow: hidden;
 }
 
 .footer a {
